--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,7 @@
     <!-- Shared helpers for live search and numeric entry formatting -->
     <script src="{% static 'js/live_search.js' %}"></script>
     <script src="{% static 'js/number_helper.js' %}"></script>
+    <script src="{% static 'js/edit_figures.js' %}"></script>
     <script>
     const toggle = document.getElementById('notif-toggle');
     if (toggle) {
