--- a/council_finance/templates/council_finance/field_list.html
+++ b/council_finance/templates/council_finance/field_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load extras %}
 {% block title %}Fields - Council Finance Counters{% endblock %}
 {% block content %}
 <h1 class="text-2xl font-bold mb-4">Fields Manager</h1>
@@ -29,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for f in fields_by_category[slug] %}
+            {% for f in fields_by_category|get_item:slug %}
             <tr class="odd:bg-gray-50">
                 <td class="border px-2 py-1"><a href="{% url 'field_edit' f.slug %}" class="text-blue-600 underline">{{ f.name }}</a></td>
                 <td class="border px-2 py-1 text-center">{{ f.slug }}</td>
