Expand contribute workflow with data issue queue

--- a/council_finance/templates/council_finance/god_mode.html
+++ b/council_finance/templates/council_finance/god_mode.html
@@ -10,6 +10,10 @@
     {% csrf_token %}
     <button name="reconcile_population" value="1" class="bg-green-600 text-white px-4 py-1 rounded">Check &amp; Reconcile All Population Figures</button>
   </form>
+  <form method="post">
+    {% csrf_token %}
+    <button name="assess_issues" value="1" class="bg-blue-600 text-white px-4 py-1 rounded">Assess Data Issues</button>
+  </form>
 </div>
 <form method="post">
   {% csrf_token %}
