--- a/templates/base.html
+++ b/templates/base.html
@@ -110,6 +110,7 @@
     <script src="{% static 'js/number_helper.js' %}"></script>
     <script src="{% static 'js/edit_figures.js' %}"></script>
     <script src="{% static 'js/comparison_basket.js' %}"></script>
+    <script src="{% static 'js/data_issues.js' %}"></script>
     <script>
     const toggle = document.getElementById('notif-toggle');
     if (toggle) {
